--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,7 +12,10 @@ MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/ausbildungscout
 FRONTEND_URL=http://localhost:3000
 
 # AI/Gemini Configuration
+# Single key (backward compatible):
 GEMINI_API_KEY=your_gemini_api_key_here
+# Multiple keys (recommended - comma-separated for automatic rotation):
+# GEMINI_API_KEYS=key1_here,key2_here,key3_here,key4_here
 
 # Scraper Configuration (for Miner mode)
 SCRAPER_ENABLED=false
